<resources>
    <string name="app_name">展厅控制</string>
    <string name="computer_activity_name">计算机状态</string>
    <string name="action_activity_name">执行动作</string>
    <string name="step_pos_activity_name">设置步骤位置</string>
    <string name="title_status">状态</string>
    <string name="title_guide">导览</string>
    <string name="title_debug">调试</string>
    <string name="title_setting">设置</string>
    <string name="btn_computer_power_off">全部关机</string>
    <string name="btn_computer_power_on">全部开机</string>
    <string name="btn_all_light_on">全部开灯</string>
    <string name="btn_all_light_off">全部关灯</string>
    <string name="debug_menu_action">执行动作</string>
    <string name="debug_menu_device_classify">设备分类</string>
    <string name="debug_menu_device_no">设备编号</string>
    <string name="debug_filename">文件名称</string>
    <string name="debug_brightness">亮度</string>
    <string name="debug_execute">测试</string>
    <string name="debug_save">保存</string>
    <string name="setting_add_step">增加步数</string>
    <string name="setting_step_pos">步数定位</string>
    <string name="setting_add_action">增加动作</string>
    <string name="setting_clone_action">复制动作</string>

</resources>